Adjust title spacing resolves issue #220

--- a/css/styles.css
+++ b/css/styles.css
@@ -9397,6 +9397,7 @@ div.desc {
 .gallery-text{
   color: #ECB602;
   font-size: 64px;
+  line-height: 0.9;
 }
 
 .col-flex-text{
